--- a/sample_projects/sbml_testing/Makefile
+++ b/sample_projects/sbml_testing/Makefile
@@ -20,9 +20,12 @@ ARCH := native # best auto-tuning
 CFLAGS := -march=$(ARCH) -g  -fomit-frame-pointer -Xpreprocessor -fopenmp -m64 -std=c++11 -D LIBROADRUNNER 
 #CFLAGS := -march=$(ARCH) -fomit-frame-pointer -Xpreprocessor -fopenmp -m64 -std=c++11 -U LIBROADRUNNER 
 
+# OSX
 PATH_TO_OMP := -L/usr/local/opt/libomp/lib
+OMP_LIB := $(PATH_TO_OMP) -lomp
 
-LIBRR_DIR := /Users/heiland/libroadrunner/roadrunner-osx-10.9-cp36m
+#LIBRR_DIR := /Users/heiland/libroadrunner/roadrunner-osx-10.9-cp36m
+#LIBRR_LIBS := /home/heiland/libroadrunner/cpplibroadrunner-1.3.0-linux_x86_64/lib
 
 OSFLAG 	:=
 ifeq ($(OS),Windows_NT)
@@ -37,6 +40,11 @@ else
 	UNAME_S := $(shell uname -s)
 	ifeq ($(UNAME_S),Linux)
 		OSFLAG += -D LINUX
+		OMP_LIB :=
+		LIBRR_DIR := $(HOME)/libroadrunner/libroadrunner
+		LIBRR_CFLAGS := -I${LIBRR_DIR}/include/rr/C
+		LIBRR_LIBS := ${LIBRR_DIR}/lib
+		CFLAGS := -march=$(ARCH) -g  -fomit-frame-pointer -fopenmp -m64 -std=c++11 -D LIBROADRUNNER 
 	endif
 	ifeq ($(UNAME_S),Darwin)
 		CC := clang++
@@ -48,6 +56,9 @@ else
 		UNAME_P := $(shell uname -p)
 	ifeq ($(UNAME_P),x86_64)
 		OSFLAG += -D AMD64
+		LIBRR_DIR := $(HOME)/libroadrunner/libroadrunner
+		LIBRR_CFLAGS := -I${LIBRR_DIR}/include/rr/C
+		CFLAGS := -march=$(ARCH) -g  -fomit-frame-pointer -fopenmp -m64 -std=c++11 -D LIBROADRUNNER 
 	endif
 		ifneq ($(filter %86,$(UNAME_P)),)
 	OSFLAG += -D IA32
@@ -86,7 +97,8 @@ all: main.cpp $(ALL_OBJECTS)
 	@echo LIBRR_CFLAGS= $(LIBRR_CFLAGS)
 	@echo LIBRR_LIBS= $(LIBRR_LIBS)
 	@echo 
-	$(COMPILE_COMMAND) -L$(LIBRR_LIBS) -lroadrunner_c_api $(PATH_TO_OMP) -lomp -o $(PROGRAM_NAME) $(ALL_OBJECTS) main.cpp
+#	$(COMPILE_COMMAND) -L$(LIBRR_LIBS) -lroadrunner_c_api $(PATH_TO_OMP) -lomp -o $(PROGRAM_NAME) $(ALL_OBJECTS) main.cpp
+	$(COMPILE_COMMAND) -L$(LIBRR_LIBS) -lroadrunner_c_api $(OMP_LIB) -o $(PROGRAM_NAME) $(ALL_OBJECTS) main.cpp
 	@echo
 	@echo created $(PROGRAM_NAME)
 	@echo
