--- a/sample_projects/sbml_testing/Makefile
+++ b/sample_projects/sbml_testing/Makefile
@@ -30,6 +30,11 @@ OMP_LIB := $(PATH_TO_OMP) -lomp
 OSFLAG 	:=
 ifeq ($(OS),Windows_NT)
 	OSFLAG += -D WIN32
+	OMP_LIB := 
+	LIBRR_DIR := C:\Users\heiland\libroadrunner\roadrunner-win64-vs14-cp35m
+	LIBRR_LIBS := C:\Users\heiland\libroadrunner\roadrunner-win64-vs14-cp35m/bin
+	LIBRR_CFLAGS := -I${LIBRR_DIR}/include/rr/C
+	CFLAGS := -march=$(ARCH) -fomit-frame-pointer -fopenmp -m64 -std=c++11 -D LIBROADRUNNER 
 	ifeq ($(PROCESSOR_ARCHITECTURE),AMD64)
 		OSFLAG += -D AMD64
 	endif
